kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookingcomp
  labels:
    name: bookingcomp
    app: bookingcomp
