kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resortsLite-service
  namespace: resortsLite
  labels:
    app: resortsLite
    component: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: resortsLite
